smapi.pas


  function SquishOpenArea(name: PChar; mode: word; _type: word): PMSG; cdecl; external External_library name 'SquishOpenArea';
  function SquishValidate(name: PChar): sword; cdecl; external External_library name 'SquishValidate';

  function JamOpenArea(name: PChar; mode: word; _type: word): PMSG; cdecl; external External_library name 'JamOpenArea';
  function JamValidate(name: PChar): sword; cdecl; external External_library name 'JamValidate';

  function CvtCtrlToKludge(ctrl: PChar): PChar; cdecl; external External_library name 'CvtCtrlToKludge';
  function GetCtrlToken(where: PChar; what: PChar): PChar; cdecl; external External_library name 'GetCtrlToken';
  function CopyToControlBuf(txt: PChar; newtext: PPChar; length: PLongInt): PChar; cdecl; external External_library name 'CopyToControlBuf';
  procedure ConvertControlInfo(ctrl: PChar; orig: PNETADDR; dest: PNETADDR); cdecl; external External_library name 'ConvertControlInfo';
  function NumKludges(txt: PChar): word; cdecl; external External_library name 'NumKludges';
  procedure RemoveFromCtrl(ctrl: PChar; what: PChar); cdecl; external External_library name 'RemoveFromCtrl';

  function Address(a: PNETADDR): PChar; cdecl; external External_library name 'Address';
  function StripNasties(str: PChar): PChar; cdecl; external External_library name 'StripNasties';

end.
